# ninja-validator

./: .env.example  .gitignore  README.md  nginx-ninja66.conf  pyproject.toml  run_validate.sh  start_pool_manager.sh  start_submissions_api.sh  start_validator.sh
deploy/: install_pm2_hardening.sh  pm2-sync-dump.service  pm2-sync-dump.timer
docs/: polar-rollout-data-engine.md
scripts/: backfill_ledger_uids.sh  calibrate_swebench_verified.py  compare_openrouter_judge.py  compare_openrouter_judge_concurrent.py  local_swebench_dashboard.py  manual_duel.py  manual_promote_king.py  openrouter_solver_backend_probe.py  private_submission_viewer.py  repair_shared_pool.py  rewind_validator_from_duel.py  safe_restart_validator.py  sim_new_rules.py  solver_policy_ab.sh  sync_pm2_dump.sh  terminal_bench_mini_swe_setup.sh  terminal_bench_tau_setup.sh  test_sampling_seed_determinism.py  test_set_weights.py  test_task_validity.py
src/: benchmarks.py  claude_runner.py  claw_runner.py  cli.py  compare.py  config.py  dashboard_queue.py  diff_judge_logging.py  docker_solver.py  eval.py  fast_crown_eval.py  github_miner.py  hotkey_uid_cache.py  openrouter_client.py  openrouter_proxy.py  pipeline.py  private_submission.py  r2.py  sampling_seed.py  solve_spend.py  solver_runner.py  sortdir.c  submission_api.py  swebench_crown_benchmark.py  task_generation.py  task_only_hf_export.py  task_pool_manager.py  tau_entrypoint.py  terminal_bench_crown_benchmark.py  terminal_bench_mini_swe_agent.py  terminal_bench_tau_agent.py  validate.py  validator_state_io.py  workspace.py
tests/: conftest.py  test_chat_completion.py  test_compare.py  test_config.py  test_dashboard_queue.py  test_diff_judge_logging.py  test_duel_resolver_worker.py  test_git_metadata_sanitize.py  test_github_miner.py  test_github_promotion.py  test_hotkey_uid_cache.py  test_judging.py  test_llm_cache.py  test_mini_swe_agent.py  test_multifile_submission.py  test_openrouter_client.py  test_openrouter_proxy.py  test_openrouter_proxy_cache.py  test_openrouter_solver_backend_probe.py  test_pipeline.py  test_private_submission.py  test_proxy.py  test_publish_private_submission.py  test_r2_public_sanitization.py  test_rollouts.py  test_sampling_seed.py  test_sandbox.py  test_sync_pm2_dump.py  (+8 more)
(+40 files in other folders)
